--- a/index.html
+++ b/index.html
@@ -440,7 +440,36 @@
                             </li>
                           </ul>
                         </td>
-                        <td>-----</td>
+                        <td>
+                          <ul class="list-unstyled text-center">
+                            <li>
+<!--                               <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1t5WdnMn3k5emRjyQQAxhv6Ja-h6VvEBfnDzSdO4ZIzM/edit?usp=sharing"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Nicolas y Vilca Javier - Observaciones
+                              </a> -->
+                              <hr />
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/12dzC1glbkDkGXLQQPVFYFr-4JSiDItsAe6JcfHA4kkg/edit?usp=sharing"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Observaciones
+                              </a>
+                            </li>
+                        </td>
                       </tr>
                       <tr>
                         <th scope="row">5</th>
@@ -476,7 +505,36 @@
                             </li>
                           </ul>
                         </td>
-                        <td>-----</td>
+                        <td>
+                          <ul class="list-unstyled text-center">
+                            <li>
+<!--                               <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1t5WdnMn3k5emRjyQQAxhv6Ja-h6VvEBfnDzSdO4ZIzM/edit?usp=sharing"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Nicolas y Vilca Javier - Observaciones
+                              </a> -->
+                              <hr />
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/12dzC1glbkDkGXLQQPVFYFr-4JSiDItsAe6JcfHA4kkg/edit?usp=sharing"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Observaciones
+                              </a>
+                            </li>
+                        </td>
                       </tr>
                       <tr>
                         <th scope="row">6</th>
@@ -489,6 +547,71 @@
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
                                 target="_blank"
                                 href="https://docs.google.com/document/d/1z6XZCHIEJwqFf_uKas9DOeHp0GxLjumRmNOVQtqYats/edit?usp=sharing"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Tesis
+                              </a>
+                              <hr />
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1vtnb7_5WDnbBo5G769DAYLJ4EVlF-ike/edit?usp=sharing&ouid=110596410194594946977&rtpof=true&sd=true"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Tesis
+                              </a>
+                            </li>
+                          </ul>
+                        </td>
+                        <td>
+                          <ul class="list-unstyled text-center">
+                            <li>
+<!--                               <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1t5WdnMn3k5emRjyQQAxhv6Ja-h6VvEBfnDzSdO4ZIzM/edit?usp=sharing"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Nicolas y Vilca Javier - Observaciones
+                              </a> -->
+                              <hr />
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/12dzC1glbkDkGXLQQPVFYFr-4JSiDItsAe6JcfHA4kkg/edit?usp=sharing"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Observaciones
+                              </a>
+                            </li>
+                        </td>
+                      </tr>
+                       <tr>
+                        <th scope="row">7</th>
+                        <td>Diseño de Procesos. Diseño de interfaces. Dominio de tecnología y herramientas</td>
+                        <td>
+                          <ul class="list-unstyled text-center">
+                            <li>
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                target="_blank"
+                                href="#"
                               >
                                 <i
                                   class="bi bi-file-earmark-word"
