--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
                       </tr>
                        <tr>
                         <th scope="row">7</th>
-                        <td>Diseño de Procesos. Diseño de interfaces. Dominio de tecnología y herramientas</td>
+                        <td>Desarrollo de componente core.</td>
                         <td>
                           <ul class="list-unstyled text-center">
                             <li>
