--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
                                 target="_blank"
-                                href="#"
+                                href="https://docs.google.com/document/d/12XrbwAG4tExS_whIduT4E-YJIgI4SPDRPFCqyDr4gak/edit?usp=sharing"
                               >
                                 <i
                                   class="bi bi-file-earmark-word"
