--- a/index.html
+++ b/index.html
@@ -455,6 +455,18 @@
                                 ></i>
                                 Anicama Nicolas y Vilca Javier - Observaciones
                               </a> -->
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1t5WdnMn3k5emRjyQQAxhv6Ja-h6VvEBfnDzSdO4ZIzM/edit?usp=sharing"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Observaciones
+                              </a>
                               <hr />
                               <a
                                 class="icon-link icon-link-hover"
@@ -520,6 +532,18 @@
                                 ></i>
                                 Anicama Nicolas y Vilca Javier - Observaciones
                               </a> -->
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1t5WdnMn3k5emRjyQQAxhv6Ja-h6VvEBfnDzSdO4ZIzM/edit?usp=sharing"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Observaciones
+                              </a>
                               <hr />
                               <a
                                 class="icon-link icon-link-hover"
@@ -585,6 +609,18 @@
                                 ></i>
                                 Anicama Nicolas y Vilca Javier - Observaciones
                               </a> -->
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1t5WdnMn3k5emRjyQQAxhv6Ja-h6VvEBfnDzSdO4ZIzM/edit?usp=sharing"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Observaciones
+                              </a>
                               <hr />
                               <a
                                 class="icon-link icon-link-hover"
