--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
                                   class="bi bi-file-earmark-word"
                                   aria-hidden="true"
                                 ></i>
-                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Tesis
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Observaciones
                               </a>
                               <hr />
                               <a
@@ -697,7 +697,7 @@
                                   class="bi bi-file-earmark-word"
                                   aria-hidden="true"
                                 ></i>
-                                Chunga Vargas Manuel Alberto - Tesis
+                                Chunga Vargas Manuel Alberto - Observaciones
                               </a>
                             </li>
                           </ul>
@@ -714,7 +714,7 @@
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
                                 target="_blank"
-                                href="#"
+                                href="https://docs.google.com/document/d/1s0qdOfr5LU_bJjWe_gZ1MXX4l5IaEFA6tJM3WKtGMU0/edit?usp=sharing"
                               >
                                 <i
                                   class="bi bi-file-earmark-word"
