--- a/index.html
+++ b/index.html
@@ -740,6 +740,42 @@
                         </td>
                         <td>-----</td>
                       </tr>
+                      <tr>
+                        <th scope="row">9</th>
+                        <td>Desarrollo de componentes 1.</td>
+                        <td>
+                          <ul class="list-unstyled text-center">
+                            <li>
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                target="_blank"
+                                href="https://docs.google.com/document/d/1EWfi1t7cDOkrhQ_eSHrYnQKduBKB4iXDXGNmsjYvDiw/edit?usp=sharing"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Tesis
+                              </a>
+                              <hr />
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1JOy0BpPzn6BWeYWFnmntBVSajZfxtBNn/edit?usp=sharing&ouid=110596410194594946977&rtpof=true&sd=true"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Tesis
+                              </a>
+                            </li>
+                          </ul>
+                        </td>
+                        <td>-----</td>
+                      </tr>
                     </tbody>
                   </table>
                 </div>
