--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
                                 target="_blank"
-                                href="#"
+                                href="https://docs.google.com/document/d/1l8lwmj8G7_XYrPAFwePjknZXSlOtCNePVuoP7hWG8UU/edit?usp=sharing"
                               >
                                 <i
                                   class="bi bi-file-earmark-word"
