--- a/index.html
+++ b/index.html
@@ -872,6 +872,80 @@
                         </td>
                         <td>-----</td>
                       </tr>
+
+                      <tr>
+                        <th scope="row">11</th>
+                        <td>Evaluación final del software</td>
+                        <td>
+                          <ul class="list-unstyled text-center">
+                            <li>
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                target="_blank"
+                                href="https://unmsmmail-my.sharepoint.com/:w:/g/personal/javier_vilca_unmsm_edu_pe/EY8YUVf_OXxOtutE0fVBEh4B7x6UyyZc966MOk-Dj3I7HA?e=KLC002"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Artículo
+                              </a>
+                              <hr />
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1ibhqzq0yBfkTUbt3gbEu8BwYW7RWlJVC/edit?usp=sharing&ouid=102836762613916120846&rtpof=true&sd=true"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Tesis
+                              </a>
+                            </li>
+                          </ul>
+                        </td>
+                        <td>-----</td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">12</th>
+                        <td>Conferencia WoS/Scopus, Redacción de Artículo: Introducción y Estado del Arte</td>
+                        <td>
+                          <ul class="list-unstyled text-center">
+                            <li>
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                target="_blank"
+                                href="https://unmsmmail-my.sharepoint.com/:w:/g/personal/javier_vilca_unmsm_edu_pe/EY8YUVf_OXxOtutE0fVBEh4B7x6UyyZc966MOk-Dj3I7HA?e=KLC002"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Artículo
+                              </a>
+                              <hr />
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1ibhqzq0yBfkTUbt3gbEu8BwYW7RWlJVC/edit?usp=sharing&ouid=102836762613916120846&rtpof=true&sd=true"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Tesis
+                              </a>
+                            </li>
+                          </ul>
+                        </td>
+                        <td>-----</td>
+                      </tr>
                     
                     </tbody>
                   </table>
