--- a/index.html
+++ b/index.html
@@ -983,6 +983,74 @@
                         </td>
                         <td>-----</td>
                       </tr>
+
+                      <tr>
+                        <th scope="row">14</th>
+                        <td>Redacción de Artículo y Tesis. Aporte Práctico (Software)</td>
+                        <td>
+                          <ul class="list-unstyled text-center">
+                            <li>
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                target="_blank"
+                                href="https://unmsmmail-my.sharepoint.com/:w:/g/personal/javier_vilca_unmsm_edu_pe/EY8YUVf_OXxOtutE0fVBEh4B7x6UyyZc966MOk-Dj3I7HA?e=KLC002"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Artículo
+                              </a>
+                              <hr />
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1HZZ-oPhE9fPU4ZtGZQkgCcQD6Z9ZTSMn/edit?usp=sharing&ouid=102836762613916120846&rtpof=true&sd=true"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Artículo
+                              </a>
+                            </li>
+                          </ul>
+                        </td>
+
+                        <td>
+                          <ul class="list-unstyled text-center">
+                            <li>
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                target="_blank"
+                                href="https://unmsmmail-my.sharepoint.com/:w:/g/personal/nicolas_anicama_unmsm_edu_pe/EW0PRyRZFXFMpmr2EyrEIXUBWZ9gGYsWpbivXFPSXTIfJA?e=eW6ZS7"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Observaciones
+                              </a>
+                              <hr />
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1XZ1vhFtJ-4ARSrFy1Za8V72GD8rzZ6J_JdIXW3WQ7Wk/edit?usp=sharing"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Observaciones
+                              </a>
+                            </li>
+                          </ul>
+                        </td>                        
+                      </tr>
                     
                     </tbody>
                   </table>
