--- a/index.html
+++ b/index.html
@@ -1006,7 +1006,7 @@
                               <a
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
-                                href="https://docs.google.com/document/d/1HZZ-oPhE9fPU4ZtGZQkgCcQD6Z9ZTSMn/edit?usp=sharing&ouid=102836762613916120846&rtpof=true&sd=true"
+                                href="https://docs.google.com/document/d/10DqxSoySo7K3BjeUcEN50nPiiTihAHtt/edit?usp=sharing&ouid=102836762613916120846&rtpof=true&sd=true"
                                 target="_blank"
                               >
                                 <i
@@ -1086,7 +1086,7 @@
                               <a
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
-                                href="https://docs.google.com/document/d/1HZZ-oPhE9fPU4ZtGZQkgCcQD6Z9ZTSMn/edit?usp=sharing&ouid=102836762613916120846&rtpof=true&sd=true"
+                                href="https://docs.google.com/document/d/10DqxSoySo7K3BjeUcEN50nPiiTihAHtt/edit?usp=sharing&ouid=102836762613916120846&rtpof=true&sd=true"
                                 target="_blank"
                               >
                                 <i
@@ -1094,6 +1094,18 @@
                                   aria-hidden="true"
                                 ></i>
                                 Chunga Vargas Manuel Alberto - Artículo
+                              </a>
+<a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                target="_blank"
+                                href="https://docs.google.com/document/d/1-QHKj263K1AVM1BAsk6wa0xoA-Xa7umu/edit?usp=sharing&ouid=102836762613916120846&rtpof=true&sd=true"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Tesis
                               </a>
                             </li>
                           </ul>
