--- a/index.html
+++ b/index.html
@@ -1082,6 +1082,18 @@
                                 ></i>
                                 Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Tesis
                               </a>
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                target="_blank"
+                                href="https://unmsmmail-my.sharepoint.com/:p:/g/personal/nicolas_anicama_unmsm_edu_pe/EXUaIpm2iJJPjiCX8dqPDLABAAC-von5TpzMPAH5XgH_hQ?e=LC5u6U"
+                              >
+                                <i
+                                  class="bi bi-file-ppt"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - PPT
+                              </a>
                               <hr />
                               <a
                                 class="icon-link icon-link-hover"
