--- a/index.html
+++ b/index.html
@@ -1155,7 +1155,121 @@
                           </ul>
                         </td>                        
                       </tr>
-                    
+                      <tr>
+                        <th scope="row">16</th>
+                        <td>Correcciones</td>
+                        <td>
+                          <ul class="list-unstyled text-center">
+                            <li>
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                target="_blank"
+                                href="#"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Artículo
+                              </a>
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                target="_blank"
+                                href="#"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Tesis
+                              </a>
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                target="_blank"
+                                href="https://unmsmmail-my.sharepoint.com/:p:/g/personal/nicolas_anicama_unmsm_edu_pe/EXUaIpm2iJJPjiCX8dqPDLABAAC-von5TpzMPAH5XgH_hQ?e=LC5u6U"
+                              >
+                                <i
+                                  class="bi bi-file-ppt"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - PPT
+                              </a>
+                              <hr />
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1q-ZYmkxEfZYLh2nKZq_lCU5qaCEB8QRP/edit?usp=sharing&ouid=102836762613916120846&rtpof=true&sd=true"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Artículo
+                              </a>
+<a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                target="_blank"
+                                href="https://docs.google.com/document/d/1n6klyIdHfiXfVtA3EjgaWdDmtzgdu2gS/edit?usp=sharing&ouid=102836762613916120846&rtpof=true&sd=true"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Tesis
+                              </a>
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                target="_blank"
+                                href="https://drive.google.com/file/d/1yEwBKMZvVlZSf-HiIokJdctt-GKLK_6j/view?usp=sharing"
+                              >
+                                <i
+                                  class="bi bi-file-ppt"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - PPT
+                              </a>
+                            </li>
+                          </ul>
+                        </td>
+
+                        <td>
+                          <ul class="list-unstyled text-center">
+                            <li>
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                target="_blank"
+                                href="https://unmsmmail-my.sharepoint.com/:w:/g/personal/nicolas_anicama_unmsm_edu_pe/EW0PRyRZFXFMpmr2EyrEIXUBWZ9gGYsWpbivXFPSXTIfJA?e=eW6ZS7"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Anicama Espinoza Nicolas Leonardo y Vilca Velasquez Javier Alberto - Observaciones
+                              </a>
+                              <hr />
+                              <a
+                                class="icon-link icon-link-hover"
+                                style="--bs-link-hover-color-rgb: 25, 135, 84"
+                                href="https://docs.google.com/document/d/1XZ1vhFtJ-4ARSrFy1Za8V72GD8rzZ6J_JdIXW3WQ7Wk/edit?usp=sharing"
+                                target="_blank"
+                              >
+                                <i
+                                  class="bi bi-file-earmark-word"
+                                  aria-hidden="true"
+                                ></i>
+                                Chunga Vargas Manuel Alberto - Observaciones
+                              </a>
+                            </li>
+                          </ul>
+                        </td>                        
+                      </tr>
                     </tbody>
                   </table>
                 </div>
