--- a/index.html
+++ b/index.html
@@ -1189,7 +1189,7 @@
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
                                 target="_blank"
-                                href="#"
+                                href="https://unmsmmail-my.sharepoint.com/:w:/g/personal/javier_vilca_unmsm_edu_pe/EY8YUVf_OXxOtutE0fVBEh4B7x6UyyZc966MOk-Dj3I7HA?rtime=gQWkJ_7x20g"
                               >
                                 <i
                                   class="bi bi-file-earmark-word"
@@ -1201,7 +1201,7 @@
                               <a
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
-                                href="https://docs.google.com/document/d/1q-ZYmkxEfZYLh2nKZq_lCU5qaCEB8QRP/edit?usp=sharing&ouid=102836762613916120846&rtpof=true&sd=true"
+                                href="https://unmsmmail-my.sharepoint.com/:w:/g/personal/javier_vilca_unmsm_edu_pe/EUWPnvpjZMRPp5xgPUdgEecBMpkhxbznQYU-gxLRhacgxw?e=0FEN4f"
                                 target="_blank"
                               >
                                 <i
