--- a/index.html
+++ b/index.html
@@ -1177,7 +1177,7 @@
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
                                 target="_blank"
-                                href="#"
+                                href="https://unmsmmail-my.sharepoint.com/:w:/g/personal/javier_vilca_unmsm_edu_pe/EY8YUVf_OXxOtutE0fVBEh4B7x6UyyZc966MOk-Dj3I7HA?rtime=gQWkJ_7x20g"
                               >
                                 <i
                                   class="bi bi-file-earmark-word"
@@ -1189,7 +1189,7 @@
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
                                 target="_blank"
-                                href="https://unmsmmail-my.sharepoint.com/:w:/g/personal/javier_vilca_unmsm_edu_pe/EY8YUVf_OXxOtutE0fVBEh4B7x6UyyZc966MOk-Dj3I7HA?rtime=gQWkJ_7x20g"
+                                href="https://unmsmmail-my.sharepoint.com/:w:/g/personal/javier_vilca_unmsm_edu_pe/EUWPnvpjZMRPp5xgPUdgEecBMpkhxbznQYU-gxLRhacgxw?e=0FEN4f"
                               >
                                 <i
                                   class="bi bi-file-earmark-word"
