--- a/index.html
+++ b/index.html
@@ -1201,7 +1201,7 @@
                               <a
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
-                                href="https://unmsmmail-my.sharepoint.com/:w:/g/personal/javier_vilca_unmsm_edu_pe/EUWPnvpjZMRPp5xgPUdgEecBMpkhxbznQYU-gxLRhacgxw?e=0FEN4f"
+                                href="https://docs.google.com/document/d/10DqxSoySo7K3BjeUcEN50nPiiTihAHtt/edit"
                                 target="_blank"
                               >
                                 <i
