--- a/index.html
+++ b/index.html
@@ -1201,7 +1201,7 @@
                               <a
                                 class="icon-link icon-link-hover"
                                 style="--bs-link-hover-color-rgb: 25, 135, 84"
-                                href="https://docs.google.com/document/d/10DqxSoySo7K3BjeUcEN50nPiiTihAHtt/edit"
+                                href="https://docs.google.com/document/d/1q-ZYmkxEfZYLh2nKZq_lCU5qaCEB8QRP/edit?usp=sharing&ouid=102836762613916120846&rtpof=true&sd=true"
                                 target="_blank"
                               >
                                 <i
